# platform.core.appfw.vconf-internal-keys

./: 0001-add-key-info-in-setting-keys.xml.patch  0001-add-username-in-setting-xml.patch  0001-remove-keys-from-telephony.patch  0001-sysman-Remove-unused-vconf-key.patch  AUTHORS  CMakeLists.txt  Makefile  README  build.sh  check.xsd  check_dup.sh  create_cmd.xsl  create_get_cmd.xsl  create_header.xsl  create_init_script.xsl  create_wrapper.xsl  create_wrapper_impl.xsl  cscope.files  cscope.out  del_keys.sh  excel.txt  insert_uid_gid.sh  private_spec_add.sh  private_spec_del.sh  project.config  remove_uid_gid.sh  remove_whitespace.sh  smackinput.txt  temp  test.txt  test2.txt  test_report.xsl  update_smacktest.sh  vconf-internal-keys.pc.in
data/: .vconf-internal-setting-keys.xml.swo  .vconf-internal-setting-keys.xml.swp  run.sh  test.xsl  vconf-internal-account-keys.xml  vconf-internal-alarm-keys.xml  vconf-internal-aul-keys.xml  vconf-internal-boot-animation-keys.xml  vconf-internal-browser-keys.xml  vconf-internal-bt-keys.xml  vconf-internal-call-keys.xml  vconf-internal-camera-keys.xml  vconf-internal-ciss-keys.xml  vconf-internal-contacts-svc-keys.xml  vconf-internal-desktop-mode-keys.xml  vconf-internal-dnet-keys.xml  vconf-internal-dr-keys.xml  vconf-internal-email-keys.xml  vconf-internal-filemanager-keys.xml  vconf-internal-hotfix.xml  vconf-internal-idle-lock-keys.xml  vconf-internal-indicator-keys.xml  vconf-internal-isf-keys.xml  vconf-internal-livebox-keys.xml  vconf-internal-location-keys.xml  vconf-internal-lockscreen-keys.xml  vconf-internal-miracast-keys.xml  vconf-internal-mobile-hotspot-keys.xml  vconf-internal-moved-from.xml  vconf-internal-msg-keys.xml  vconf-internal-mtp-keys.xml  vconf-internal-nfc-keys.xml  vconf-internal-pm-keys.xml  vconf-internal-setting-keys.xml  vconf-internal-softap-keys.xml  vconf-internal-sound-keys.xml  vconf-internal-starter-keys.xml  vconf-internal-sysman-keys.xml  vconf-internal-system-keys.xml  vconf-internal-telephony-keys.xml  (+5 more)
debian/: changelog  control  rules  vconf-internal-keys-dev.install.in
fullsearch/: VCONFKEY_3G_ENABLE-result.txt  VCONFKEY_ACCOUNT_MSG_STR-result.txt  VCONFKEY_ALARM_RINGING-result.txt  VCONFKEY_ALARM_STATE-result.txt  VCONFKEY_ALARM_VOLUME_POPUP_ENABLE-result.txt  VCONFKEY_ALLSHARECAST_CONNECTED-result.txt  VCONFKEY_ALLSHARECAST_NOT_CONNECTED-result.txt  VCONFKEY_ALLSHARE_CAST_STATE-result.txt  VCONFKEY_BGSET-result.txt  VCONFKEY_BOOT_ANIMATION_FINISHED-result.txt  VCONFKEY_BROWSER_BROWSER_USER_AGENT-result.txt  VCONFKEY_BROWSER_CUSTOM_USER_AGENT-result.txt  VCONFKEY_BROWSER_PREFIX-result.txt  VCONFKEY_BT_DEVICE-result.txt  VCONFKEY_BT_DUT_MODE-result.txt  VCONFKEY_BT_DUT_MODE_OFF-result.txt  VCONFKEY_BT_DUT_MODE_ON-result.txt  VCONFKEY_BT_FILE_VISIBLE_TIME-result.txt  VCONFKEY_BT_FLIGHT_MODE_DEACTIVATED-result.txt  VCONFKEY_BT_HEADSET_NAME-result.txt  VCONFKEY_BT_HEADSET_SCO-result.txt  VCONFKEY_BT_LE_STATUS-result.txt  VCONFKEY_BT_LE_STATUS_OFF-result.txt  VCONFKEY_BT_LE_STATUS_ON-result.txt  VCONFKEY_BT_OFF_DUE_TO_TIMEOUT-result.txt  VCONFKEY_BT_POWERSAVING_MODE_DEACTIVATED-result.txt  VCONFKEY_BT_SCO_CONNECT-result.txt  VCONFKEY_BT_SCO_DISCONNECT-result.txt  VCONFKEY_CALL_OFF-result.txt  VCONFKEY_CALL_STATE-result.txt  VCONFKEY_CALL_STATE_MAX-result.txt  VCONFKEY_CALL_VIDEO_ACTIVE-result.txt  VCONFKEY_CALL_VIDEO_CONNECTING-result.txt  VCONFKEY_CALL_VOICE_ACTIVE-result.txt  VCONFKEY_CALL_VOICE_CONNECTING-result.txt  VCONFKEY_CAMERA_FLASH_STATE-result.txt  VCONFKEY_CAMERA_FLASH_STATE_OFF-result.txt  VCONFKEY_CAMERA_FLASH_STATE_ON-result.txt  VCONFKEY_CAMERA_PID-result.txt  VCONFKEY_CAMERA_SHUTTER_SOUND_POLICY-result.txt  (+1005 more)
include/: vconf-internal-account-keys.h  vconf-internal-admin-keys.h  vconf-internal-ail-keys.h  vconf-internal-alarm-keys.h  vconf-internal-allshare-keys.h  vconf-internal-appservice-keys.h  vconf-internal-boot-animation-keys.h  vconf-internal-browser-keys.h  vconf-internal-bt-keys.h  vconf-internal-calendar-keys.h  vconf-internal-call-keys.h  vconf-internal-camera-keys.h  vconf-internal-ciss-keys.h  vconf-internal-contacts-svc-keys.h  vconf-internal-csc-keys.h  vconf-internal-debug-keys.h  vconf-internal-desktop-mode-keys.h  vconf-internal-dnet-keys.h  vconf-internal-dock-keys.h  vconf-internal-dr-keys.h  vconf-internal-eas-keys.h  vconf-internal-email-keys.h  vconf-internal-face-svc-keys.h  vconf-internal-factory-keys.h  vconf-internal-filemanager-keys.h  vconf-internal-flashplayer-keys.h  vconf-internal-gallery-setting-keys.h  vconf-internal-hotfix.h  vconf-internal-idle-lock-keys.h  vconf-internal-idle-screen-keys.h  vconf-internal-indicator-keys.h  vconf-internal-isf-keys.h  vconf-internal-keys.h  vconf-internal-livebox-keys.h  vconf-internal-location-keys.h  vconf-internal-lockscreen-keys.h  vconf-internal-memo-keys.h  vconf-internal-menuscreen-keys.h  vconf-internal-miracast-keys.h  vconf-internal-mobex-connector-keys.h  (+30 more)
packaging/: vconf-internal-keys.changes  vconf-internal-keys.spec
report/: vconf-internal-account-keys.html  vconf-internal-alarm-keys.html  vconf-internal-boot-animation-keys.html  vconf-internal-browser-keys.html  vconf-internal-bt-keys.html  vconf-internal-call-keys.html  vconf-internal-camera-keys.html  vconf-internal-ciss-keys.html  vconf-internal-contacts-svc-keys.html  vconf-internal-desktop-mode-keys.html  vconf-internal-dnet-keys.html  vconf-internal-dr-keys.html  vconf-internal-email-keys.html  vconf-internal-filemanager-keys.html  vconf-internal-hotfix.html  vconf-internal-idle-lock-keys.html  vconf-internal-indicator-keys.html  vconf-internal-isf-keys.html  vconf-internal-livebox-keys.html  vconf-internal-location-keys.html  vconf-internal-lockscreen-keys.html  vconf-internal-miracast-keys.html  vconf-internal-mobile-hotspot-keys.html  vconf-internal-moved-from.html  vconf-internal-msg-keys.html  vconf-internal-mtp-keys.html  vconf-internal-nfc-keys.html  vconf-internal-pm-keys.html  vconf-internal-setting-keys.html  vconf-internal-softap-keys.html  vconf-internal-sound-keys.html  vconf-internal-starter-keys.html  vconf-internal-usb-keys.html  (+7 more)
(+41 files in other folders)
